<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:id="@+id/linear_layout_splash"
    tools:context="com.example.bedirhan.dentalmarket.SplashScreen">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="0.7"
    android:id="@+id/ll_image"
    android:gravity="bottom"
    android:orientation="vertical"
    android:layout_marginBottom="50dp"
    >
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/iw_logo"
        android:layout_gravity="center"
        />
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:id="@+id/ll_form">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="0"
            >
            <TableRow android:layout_margin="15dp"
                >
                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    android:hint="@string/eposta"
                    android:alpha="0.5"/>
            </TableRow>
            <TableRow android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp">
                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:hint="@string/prompt_password"
                    android:alpha="0.5"/>

            </TableRow>
            <TableRow android:layout_marginLeft="9dp"
                > <android.support.v7.widget.AppCompatCheckBox
                android:layout_gravity="left"
                android:id="@+id/checkbox"
                android:text="@string/remember_me"
                android:textSize="15dp"
                android:alpha="0.5"
                /></TableRow>
            <TableRow android:gravity="right"
                android:layout_marginRight="15dp"
                >
                    <Button
                        android:id="@+id/btn_login"
                        android:background="@color/MenuMavisi"
                        android:textColor="@color/Beyaz"
                        android:text="@string/action_sign_in"
                        android:layout_gravity="right"
                        />

            </TableRow>
            <TableRow
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp">
                <TextView  android:textColor="@color/Black"
                    android:alpha="0.5"
                    android:layout_marginRight="15dp"
                    android:textSize="20dp"
                    android:text="@string/sign_up"
                    android:gravity="right"
                    android:id="@+id/sign_up"/>
            </TableRow>
        </TableLayout>
    </LinearLayout>
</LinearLayout>
