<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.bedirhan.dentalmarket.ShoppingBasketActivity"
    android:background="@color/Beyaz"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="0.5"
    android:orientation="horizontal"
    android:background="@color/ShopDiv">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:textSize="20dp"
        android:textColor="@color/Black"
        android:text="@string/myshoppingbasket"
        android:textStyle="italic"
        android:gravity="center"
        android:layout_marginLeft="20dp"/>
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4">
        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/listview"></ListView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/Black"
            android:text="@string/toplam_fiyat"
            android:textStyle="bold"
            android:textSize="20dp"
            android:gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/tw_fiyat"
            android:textColor="@color/Black"
            android:textStyle="bold"
            android:textSize="20dp"
            android:gravity="center"
            android:layout_marginLeft="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="20dp"
            android:text="@string/TL"
            android:gravity="center"
            android:textColor="@color/Black"
            android:layout_marginLeft="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7">
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/btn_sepeti_onayla"
            android:textColor="@color/Beyaz"
            android:text="@string/odeme_yap"
            android:background="@color/btn_yesil"
            android:layout_margin="10dp"
            />
    </LinearLayout>
</LinearLayout>
