<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="20dp"
    android:background="@color/Beyaz">
    <ImageView
        android:id="@+id/product_image"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginBottom="3dp"
        android:layout_marginTop="3dp"
        android:layout_marginRight="5dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:orientation="vertical"
        android:layout_marginTop="3dp"
        >
        <TextView
            android:id="@+id/shop_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="3dp"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/shops_name"
            android:maxLength="27"
            />
        <TextView
            android:id="@+id/product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="3dp"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="5dp"
            android:textColor="@color/card_product_name"
            android:maxLength="15"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:id="@+id/product_price"
                android:layout_marginLeft="3dp"
                android:textColor="@color/Black"/>
            <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="20dp"
            android:text="@string/TL"
            android:gravity="center"
            android:textColor="@color/Black"
            android:layout_marginLeft="10dp"/></LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="5dp"
            android:gravity="left">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sil"
                android:id="@+id/btn_delete"
                android:background="@color/btn_delete"
                android:textColor="@color/Beyaz"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                android:padding="-25dp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_gravity="center"
                android:gravity="right">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adet"
                android:textSize="18dp" />
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/days"
                android:layout_marginLeft="5dp"
                android:id="@+id/urun_adet"
                android:gravity="right"
                ></Spinner>
        </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>